clusters/home/networking/traefik/middleware-qbittorrent copy.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /qbittorrent
