clusters/home/networking/traefik/middleware-qbittorrent.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /qbittorrent
