clusters/home/networking/traefik/ingress-prowlarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.middlewares: default-prowlarr-stripprefix
spec:
  rules:
    - host: home.hont.ro
      http:
        paths:
          - path: /prowlarr
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
